2009-09-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\GSFileHandle.m:
	* Source\win32\NSMessagePort.m:
	* Source\win32\GSRunLoopCtxt.m:
	* Source\win32\NSStream.m:
	* Source\win32\NSMessagePortNameServer.m:
	* Source\NSPipe.m:
	* Source\NSTask.m:
	Fixes to try and improve subtask handling on windows.
	1. change scheme to create all handles as not inheritable, and
	just make the handles we want the child to have inheritable while
	we are launching the child.
	2. peek the data on pipes and refrain from notifying about data
	availability if the pipe doesn't really have data.  This is horrid and
	means we poll pipes ... I guess we really need to be doing async
	reads instead ... perhaps someone can do that based on the code in
	Source/win32/NSMessagePort.m which already does it.

2009-09-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: OSX compatibility tweaks ... allows initialisation
	using a string containing a simple path without any scheme.

2009-09-17 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSIndexSet.m:
	([-shiftIndexesStartingAtIndex:by:]) fix to properly merge index
	ranges when shifting left.

2009-09-15 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSMime.h:
	* Source/Additions/GSMime.m:
	Add new -excess method to return any excess data left over from parsing.
	Previously the code just used to NSLog() this data as a warning.

2009-09-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Workaround for bug in some linux SMP systems
	* Source/NSConnection.m: fix for bug #27446
	
2009-09-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Add optional diagnostics to detect system
	time changes and warn about them.
	* Source/NSException.m: Clean up to match coding standards.
	Fix uninitialised variable bug.
	* Source/NSObject.m: clean up and fix missing dealloc.
	* Headers/Foundation/NSURLCredential.h:
	* Headers/Foundation/NSHTTPCookieStorage.h: